--- a/db-CIP.yaml
+++ b/db-CIP.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+piVersion: v1
 kind: Service
 metadata:
   name: vprodb
@@ -9,7 +9,5 @@ spec:
       protocol: TCP
   selector:
     app: vprodb
-  type: ClusterIp
-
-
+  type: ClusterIP
 
